--- a/Index.html
+++ b/Index.html
@@ -3,26 +3,33 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Дипломная работа</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style2.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<div class="header-overlay"></div>
 		<div class="logo">
-			<a href="index2.html"><img src="svg/surface_logo_text.svg" alt="logo"></a>
+			<a href="index.html"><img src="svg/surface_logo_text.svg" alt="logo"></a>
 		</div>
 		<h1 class="banner-tittle">
 			<div class="line1">BE RECRUITED</div>
 			<div class="line2">PLAY COLLEGE SPORTS</div>
 		</h1>
 		<div class="app-btns">
-			<div class="ios">download on the
-				<p><span>app store</span></p>
-			</div>
-			<div class="andr">download on the
-				<p><span>google play</span></p>
-			</div>			
+			<a href="index.html">
+				<div class="ios"> 			
+					download on the
+					<p><span>app store</span></p>				
+				</div>
+			</a>
+			<a href="index.html">
+				<div class="andr">			
+					download on the
+					<p><span>google play</span></p>				
+				</div>
+			</a>			
 		</div>
 	</header>
 	<div class="wrapper_block1">
@@ -145,11 +152,13 @@
 					<div class="underline2"></div>
 				</div>
 			</div>
-			<img class="active_img" src="img/be-active_960.jpg" alt="man">
+			<div class="active_img_1">
+				<img class="active_img" src="img/be-active_960.jpg" alt="man">
+			</div>
 			<div class="active_text">
 				<div id="mobile_h2" class="active_text_content">
 					<h2>be active</h2>		
-					<div>Post videos with your skills, Like and follow others 
+					<div class="b2txt">Post videos with your skills, Like and follow others 
 	to be more popular.</div>
 			    </div>
 			</div>
@@ -199,16 +208,23 @@ enjoyable experience. </div>
 			</div>	
 		</div>
 		<div class="app-btns">
-			<div class="ios">download on the
-				<span>app store</span>
-			</div>
-			<div class="andr">download on the
-				<p><span>google play</span></p>
-			</div>			
+			<a href="index.html">
+				<div class="ios">download on the
+					<span>app store</span>
+				</div>
+			</a>
+			<a href="index.html">	
+				<div class="andr">download on the
+					<p><span>google play</span></p>
+				</div>
+			</a>				
 		</div>
 		<div class="logo2">
 			<a href="index2.html"><img src="svg/surface_logo_text.svg" alt="logo"></a>
 		</div>
 	</footer>
+	<!-- <div class="pixel-perfect">
+          <img src="img/surface_desktop_pixel_perfect.jpg">
+    </div>  -->
 </body>
 </html>
