--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
 						<h3>collaboration</h3>
 					</div>
 					<div class="gray_text">
-						Work with other student athletes to  increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.
+						Work with other student athletes to increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.
 					</div>
 				</div>
 			</div>	
@@ -153,7 +153,20 @@
 				</div>
 			</div>
 			<div class="active_img_1">
-				<img class="active_img" src="img/be-active_960.jpg" alt="man">
+				<picture class="act_img">
+					<source
+						media="(min-width: 961px)"
+						srcset="img/be-active_1024.jpg" >
+					<source
+						media="(min-width: 641px)"
+						srcset="img/be-active_960.jpg">
+					<source
+						media="(max-width: 640px)"
+						srcset="img/be-active_640.jpg">
+					<img
+						src="img/be-active_1024.jpg"
+						alt="image" class="img_wdth">
+				</picture>
 			</div>
 			<div class="active_text">
 				<div id="mobile_h2" class="active_text_content">
@@ -173,10 +186,25 @@
 			<div class="active_text">
 				<div id="mobile_h2" class="contact_text_content">
 					<h2>find contact</h2>		
-					<div>Contact others to find right coach or athlete you are looking for.</div>				
+					<div class="b2txt">Contact others to find right coach or athlete you are looking for.</div>				
 				</div>
 			</div>
-			<img class="active_img" src="img/find-contact_960.jpg" alt="mans">
+			<div class="active_img_1">
+				<picture class="act_img">
+					<source
+						media="(min-width: 961px)"
+						srcset="img/find-contact_1024.jpg">
+					<source
+						media="(min-width: 641px)"
+						srcset="img/find-contact_960.jpg">
+					<source
+						media="(max-width: 640px)"
+						srcset="img/find-contact_640.jpg">
+					<img
+						src="img/find-contact_1024.jpg"
+						alt="image" class="img_wdth">
+				</picture>
+			</div>
 		</div>
 		<div class="work">
 			<div class="box_number">
@@ -185,11 +213,26 @@
 					<div class="underline2"></div>
 				</div>
 			</div>
-			<img class="active_img" src="img/work-it_960.jpg" alt="man">
+			<div class="active_img_1">
+				<picture class="act_img">
+					<source
+						media="(min-width: 961px)"
+						srcset="img/work-it_1024.jpg">
+					<source
+						media="(min-width: 641px)"
+						srcset="img/work-it_960.jpg">
+					<source
+						media="(max-width: 640px)"
+						srcset="img/work-it_640.jpg">
+					<img
+						src="img/work-it_1024.jpg"
+						alt="image" class="img_wdth">
+				</picture>
+			</div>
 			<div class="active_text">
 				<div id="mobile_h2" class="work_text_content">
 					<h2>work it</h2>		
-					<div>Enjoy being a student athlete, the recruiting process
+					<div class="b2txt">Enjoy being a student athlete, the recruiting process
 can be overwhelming, we want to make this 
 enjoyable experience. </div>
 			    </div>
@@ -223,8 +266,10 @@ enjoyable experience. </div>
 			<a href="index2.html"><img src="svg/surface_logo_text.svg" alt="logo"></a>
 		</div>
 	</footer>
-	<!-- <div class="pixel-perfect">
-          <img src="img/surface_desktop_pixel_perfect.jpg">
+<!-- 	<div class="pixel-perfect">
+        <img src="img/surface_desktop_pixel_perfect.jpg">
+		<img src="img/surface_768_pixel_perfect.jpg">
+		<img src="img/surface_320_pixel_perfect.jpg">
     </div>  -->
 </body>
 </html>
