--- a/Index.html
+++ b/Index.html
@@ -4,146 +4,95 @@
 	<meta charset="UTF-8">
 	<title>Дипломная работа</title>
 	<link rel="stylesheet" href="css/style.css">
+	<!-- <! [if lte IE11]>
+		<link type="text/css" rel="stylesheet" href="css/style.css">
+	 <![endif]> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<div class="header-overlay"></div>
 		<div class="logo">
 			<a href="index.html"><img src="svg/surface_logo_text.svg" alt="logo"></a>
 		</div>
 		<h1 class="banner-tittle">
-			<div class="line1">BE RECRUITED</div>
-			<div class="line2">PLAY COLLEGE SPORTS</div>
+			<span class="line1">BE RECRUITED</span>
+			<span class="line2">PLAY COLLEGE SPORTS</span>
 		</h1>
 		<div class="app-btns">
 			<a href="index.html">
 				<div class="ios"> 			
 					download on the
-					<p><span>app store</span></p>				
+					<span>app store</span>				
 				</div>
 			</a>
 			<a href="index.html">
 				<div class="andr">			
 					download on the
-					<p><span>google play</span></p>				
+					<span>google play</span>				
 				</div>
 			</a>			
 		</div>
 	</header>
-	<div class="wrapper_block1">
-		<div class="athlets_players">
-			<div class="athlet_img">
-				<img class="athlets" src="img/footballer_566.png" alt="athlet">
-			</div>
-			<div class="player_img">
-				<img class="players" src="img/basketballer_991.png" alt="player">
-			</div>
-		</div>
-		<div class="white1">
-			<div class="white_position">
-				<div class="white_content">
-					<div class="white_big_tittle">
-						<h2>athlets</h2>			
-					</div>
-					<div id="mobile_padding" class="white_tittle">			
-						<div class="n1">
-							<div class="number">01</div>
-							<div class="underline"></div>
-						</div>
-						<h3>connection</h3>
-					</div>
-					<div class="white_text">
-						Connect with coaches directly, you can ping coaches to view profile.
-					</div>
-				</div>	
-			</div>		
-		</div>
-		<div class="gray">
-			<div class="white_position">
-				<div class="white_content">
-					<div class="white_tittle">			
-						<div class="n2">
-							<div class="number">02</div>
-							<div class="underline"></div>
-						</div>
-						<h3>collaboration</h3>
-					</div>
-					<div class="gray_text">
-						Work with other student athletes to increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.
-					</div>
-				</div>
-			</div>	
-		</div>
-		<div class="violet">
-			<div class="white_position">
-				<div class="white_content">
-					<div class="white_tittle">			
-						<div class="n3">
-							<div class="number">03</div>
-							<div class="underline_white"></div>
-						</div>
-						<h3>growth</h3>
-					</div>
-					<div class="violet_text">
-						Resources and tools for you to get better as a student Athelte. Access to training classes, tutor sessions, etc 
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="white2">
-			<div class="white2_position">
-				<div class="white2_content">
-					<div class="white_big_tittle">
-						<h2>players</h2>			
-					</div>
-					<div id="mobile_padding2" class="white_tittle">			
-						<div class="n1">
-							<div class="number">01</div>
-							<div class="underline"></div>
-						</div>
-						<h3>connection</h3>
-					</div>
-					<div class="white_text">
-						Connect with talented athlete directly, you can watch their skills through video showreels directly from Surface 1.
-					</div>
-				</div>	
-			</div>	
-		</div>
-		<div class="gray2">
-			<div class="white2_position">
-				<div class="white2_content">
-					<div class="white_tittle">			
-						<div class="n2">
-							<div class="number">02</div>
-							<div class="underline"></div>
-						</div>
-						<h3>collaboration</h3>
-					</div>
-					<div class="gray_text">
-						Work with recruiter to increase your chances of finding talented athlete.
-					</div>
-				</div>
-			</div>	
-		</div>
-		<div class="dark_purple">
-			<div class="white2_position">
-				<div class="white2_content">
-					<div class="white_tittle">			
-						<div class="n3">
-							<div class="number3">03</div>
-							<div class="underline_white"></div>
-						</div>
-						<h3>growth</h3>
-					</div>
-					<div class="violet_text">
-						Save your time, recruit proper athlets for your team.
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<section class="athlets">
+	    <h2>Athlets</h2>
+			<picture class="ath_img" >
+					<source
+					media="(min-width: 961px)"
+					srcset="img/footballer_566.png" >
+				<source
+					media="(min-width: 641px)"
+					srcset="img/footballer_497.png">
+				<source
+					media="(max-width: 640px)"
+					srcset="img/footballer_192.png">
+				<img
+					src="img/footballer_566.png"				
+					alt="image" class="ath_img_wdth">
+			</picture>
+	  <div class="white_1">
+	     <h3>Connection</h3>
+	     <p>Connect with coaches directly, you can ping coaches to viewprofile.</p>
+	  </div>
+	  <div class="gray_1">
+	     <h3>Collaboration</h3>
+	     <p>Work with other student athletes to increase visability. When you share and like other players videos it will increaseyour visability as a player. This is the team work aspect to Surface 1.
+	     </p>
+	  </div>
+	  <div class="violet_1">
+	     <h3>Growth</h3>
+	     <p>Resources and tools for you to get better as a studentAthelte. Access to training classes, tutor sessions, etc</p>
+	  </div>
+	</section>		
+	<section class="players">
+	  <h2>Players</h2>
+			<picture class="play_img">
+				<source
+					media="(min-width: 961px)"
+					srcset="img/basketballer_991.png" >
+				<source
+					media="(min-width: 641px)"
+					srcset="img/basketballer_436.png">
+				<source
+					media="(max-width: 640px)"
+					srcset="img/basketballer_302.png">
+				<img
+					src="img/basketballer_991.png"
+					alt="image" class="play_img_wdth">
+			</picture>
+	  <div class="white_2">
+	     <h3>Connection</h3>
+	     <p>Connect with talented athlete directly, you can watch theirskills through video showreels directly from Surface 1.</p>
+	  </div>
+	  <div class="gray_2">
+	     <h3>Collaboration</h3>
+	     <p>Work with recruiter to increase your chances of findingtalented athlete.</p>
+	  </div>
+	  <div class="violet_2">
+	     <h3>Growth</h3>
+	     <p>Save your time, recruit proper athlets for your team.</p>
+	  </div>
+	</section>
 	<div class="wrapper_block2">
 		<div class="active">
 			<div class="box_number">
@@ -152,7 +101,7 @@
 					<div class="underline2"></div>
 				</div>
 			</div>
-			<div class="active_img_1">
+			<div class="active_img_1 img_left">
 				<picture class="act_img">
 					<source
 						media="(min-width: 961px)"
@@ -169,7 +118,7 @@
 				</picture>
 			</div>
 			<div class="active_text">
-				<div id="mobile_h2" class="active_text_content">
+				<div class="active_text_content">
 					<h2>be active</h2>		
 					<div class="b2txt">Post videos with your skills, Like and follow others 
 	to be more popular.</div>
@@ -184,12 +133,12 @@
 				</div>
 			</div>
 			<div class="active_text">
-				<div id="mobile_h2" class="contact_text_content">
+				<div class="contact_text_content">
 					<h2>find contact</h2>		
 					<div class="b2txt">Contact others to find right coach or athlete you are looking for.</div>				
 				</div>
 			</div>
-			<div class="active_img_1">
+			<div class="active_img_1 img_right">
 				<picture class="act_img">
 					<source
 						media="(min-width: 961px)"
@@ -213,7 +162,7 @@
 					<div class="underline2"></div>
 				</div>
 			</div>
-			<div class="active_img_1">
+			<div class="active_img_1 img_left">
 				<picture class="act_img">
 					<source
 						media="(min-width: 961px)"
@@ -230,7 +179,7 @@
 				</picture>
 			</div>
 			<div class="active_text">
-				<div id="mobile_h2" class="work_text_content">
+				<div class="work_text_content">
 					<h2>work it</h2>		
 					<div class="b2txt">Enjoy being a student athlete, the recruiting process
 can be overwhelming, we want to make this 
@@ -240,7 +189,6 @@ enjoyable experience. </div>
 		</div>
 	</div>
 	<footer>
-		<div class="footer-overlay"></div>
 		<div class="footer_tittle">
 			<div class="logo_icon">
 				<a href="index2.html"><img src="svg/surface_logo.svg" alt="logo"></a>
@@ -258,7 +206,7 @@ enjoyable experience. </div>
 			</a>
 			<a href="index.html">	
 				<div class="andr">download on the
-					<p><span>google play</span></p>
+					<span>google play</span>
 				</div>
 			</a>				
 		</div>
@@ -266,10 +214,10 @@ enjoyable experience. </div>
 			<a href="index2.html"><img src="svg/surface_logo_text.svg" alt="logo"></a>
 		</div>
 	</footer>
-<!-- 	<div class="pixel-perfect">
+	<!-- <div class="pixel-perfect">
         <img src="img/surface_desktop_pixel_perfect.jpg">
 		<img src="img/surface_768_pixel_perfect.jpg">
 		<img src="img/surface_320_pixel_perfect.jpg">
-    </div>  -->
-</body>
+    </div> 
+</body> -->
 </html>
