--- a/Index.html
+++ b/Index.html
@@ -194,8 +194,8 @@ enjoyable experience. </div>
 				<a href="index2.html"><img src="svg/surface_logo.svg" alt="logo"></a>
 			</div>
 			<div class="footer_text">
-				<h1>download app</h1>
-				<h4>show everone what you can do!</h4>
+				<h2>download app</h2>
+				<p class="ftxt">show everone what you can do!</p>
 			</div>	
 		</div>
 		<div class="app-btns">
